# FlightCore

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  rollup.config.js
.github/: dependabot.yml
.github/workflows/: push-test.yml  release.yml
docs/: DEV-TOOLS.md  DEVELOPMENT.md  FAQ.md  INSTALLATION.md  TROUBLESHOOTING.md  index.html
scripts/: check_version_numbers.py  create-release-file.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.old
src-tauri/bindings/: CommitHead.ts  FlightCoreVersion.ts  InstallProgress.ts  InstallState.ts  InstallType.ts  NorthstarLaunchOptions.ts  NorthstarLog.ts  NorthstarMod.ts  NorthstarThunderstoreRelease.ts  NorthstarThunderstoreReleaseWrapper.ts  ParsedLogResults.ts  ParsedModFromLog.ts  Project.ts  PullRequestType.ts  PullsApiResponseElement.ts  ReleaseInfo.ts  Repo.ts  TSModVersion.ts  Tag.ts  TagWrapper.ts  ThunderstoreMod.ts  ThunderstoreModVersion.ts  ThunderstorePackageElement.ts
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  util.rs
src-tauri/src/development/: mod.rs
src-tauri/src/github/: mod.rs  pull_requests.rs  release_notes.rs
src-tauri/src/mod_management/: legacy.rs  mod.rs  plugins.rs
src-tauri/src/northstar/: install.rs  launch_arguments.rs  mod.rs  nslog.rs  profile.rs
src-tauri/src/platform_specific/: linux.rs  mod.rs  windows.rs
src-tauri/src/plugin_management/: detection.rs  download.rs  mod.rs
src-tauri/src/repair_and_verify/: log_handling.rs  mod.rs
src-tauri/src/thunderstore/: mod.rs
src-ui/: README.md
src-ui/src/: main.ts
src-vue/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vuex-shim.d.ts
src-vue/src/: App.vue  main.ts  style.css  vuex-shim.d.ts
src-vue/src/components/: InstallProgressBar.vue  LanguageSelector.vue  LaunchArgumentsSelector.vue  LocalModCard.vue  ModsMenu.vue  NotificationButton.vue  PlayButton.vue  PullRequestsSelector.vue  ThunderstoreModCard.vue
src-vue/src/i18n/lang/: da.json  de.json  de.ts  en.json  en.ts  es.json  fr.json  fr.ts  it.json  pl.json  ru.json  zh_Hans.json
src-vue/src/plugins/: store.ts
src-vue/src/plugins/modules/: notifications.ts  pull_requests.ts  search.ts
src-vue/src/utils/: FlightCoreVersion.d.ts  GameInstall.ts  InstallType.ts  LaunchArgument.ts  LaunchObject.d.ts  LaunchOptions.ts  NorthstarMod.d.ts  NorthstarState.ts  PullsApiResponse.ts  ReleaseCanal.ts  ReleaseInfo.d.ts  SortOptions.d.ts  Tabs.ts  filter.ts  ui.ts
src-vue/src/utils/thunderstore/: ThunderstoreMod.d.ts  ThunderstoreModStatus.ts  ThunderstoreModVersion.d.ts  version.ts
src-vue/src/views/: ChangelogView.vue  DeveloperView.vue  LogsView.vue  ModsView.vue  PlayView.vue  RepairView.vue  SettingsView.vue  ThunderstoreModsView.vue
src-vue/src/views/mods/: LocalModsView.vue  ThunderstoreModsView.vue
