[package]
name = "flightcore"
version = "3.0.3"
description = "Mod-manager for Northstar"
authors = ["https://github.com/R2NorthstarTools/FlightCore/graphs/contributors"]
license = "MIT"
repository = "https://github.com/R2NorthstarTools/FlightCore"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Keeps line tables in built binary
# c.f.: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
# This is done to see line numbers in stack trace on sentry.io
debug = 1

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
# Sentry (crash) logging
sentry = "0.32"
sentry-log = "0.34"
# Find steam games
steamlocate = "2.0.0-beta.2"
# Error messages
anyhow = "1.0"
# libthermite for Northstar/mod install handling
libthermite = { version = "0.8.1", features = ["proton"] }
# zip stuff
zip = "0.6.2"
# Regex
regex = "1.10"
# Read out running application process names
sysinfo = "0.30.13"
# HTTP requests
reqwest = { version = "0.11", features = ["blocking", "json"] }
# JSON5 parsing support (allows comments in JSON)
json5 = "0.4.1"
# Async recursion for recursive mod install
async-recursion = "1.1.1"
# For parsing timestamps
chrono = "0.4.38"
# TypeScript bindings
ts-rs = "10.0"
# const formatting
const_format = "0.2.33"
# Logging libraries
pretty_env_logger = "0.5.0"
log = "0.4"
# Extracting zip files easily
zip-extract = "0.1.3"
# open urls
open = "5.3.0"
semver = "1.0"
# simplified filesystem access
glob = "0.3.1"
dirs = "5"
# Random number stuff
rand = "0.8.5"

# Interacting with GitHub
octocrab = "0.38.0"
# Library for removing markdown links
remove-markdown-links = "1.0.0"
tauri-plugin-store = "2"


[target.'cfg(windows)'.dependencies]
# Windows API stuff
winapi = "0.3.9"
winreg = "0.52.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
